[project]
name = "taller10"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "grain>=0.2.16",
    "jax>=0.10.0",
    "kagglehub>=1.0.0",
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "modal>=1.4.2",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]
